//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  provider String [not null, default: 'email']
  firstName String [not null]
  lastName String [not null]
  email String [unique]
  username String [unique, not null]
  password String [not null]
  image String
  role Role [not null, default: 'USER']
  github String
  website String
  twitter String
  bio String
  location String
  accountStatus AccountStatus [not null, default: 'ACTIVE']
  projects Project [not null]
  posts Post [not null]
  reports AdminReport [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Project {
  id String [pk]
  title String [not null]
  intro String [not null]
  image String
  content Json [not null]
  githubUrl String
  siteUrl String
  appStoreUrl String
  playStoreUrl String
  tags String[] [not null]
  status Status [not null, default: 'DRAFT']
  author User [not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Post {
  id String [pk]
  title String [not null]
  intro String [not null]
  image String
  tags String[] [not null]
  content Json [not null]
  status Status [not null, default: 'DRAFT']
  author User [not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table AdminReport {
  id String [pk]
  title String [not null]
  content Json [not null]
  author User
  authorId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Role {
  USER
  ADMIN
}

Enum AccountStatus {
  BANNED
  ON_HOLD
  ACTIVE
}

Enum Status {
  PUBLISHED
  DRAFT
  SCHEDULED
}

Ref: Project.authorId > User.id [delete: Cascade]

Ref: Post.authorId > User.id [delete: Cascade]

Ref: AdminReport.authorId > User.id [delete: Cascade]